--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "expo-web-browser": "~10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
