--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,6 +27,7 @@
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-slide-to-unlock": "^0.1.6",
     "react-native-web": "0.17.7",
     "react-native-webview": "11.18.1"
   },
