--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.2",
+    "@polkadot/keyring": "^9.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@rneui/base": "^4.0.0-rc.4",
     "@rneui/themed": "^4.0.0-rc.4",
+    "ethers": "^5.6.9",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
