--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,11 +7,13 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.2",
-    "@polkadot/keyring": "^9.4.1",
+    "@polkadot/api": "^8.9.1",
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@rneui/base": "^4.0.0-rc.4",
@@ -22,6 +24,8 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.2",
     "expo-web-browser": "~10.2.1",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -36,5 +40,5 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": false
 }
