--- a/front-end/package.json
+++ b/front-end/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-slide-to-unlock": "^0.1.6",
     "react-native-web": "0.17.7",
-    "react-native-webview": "11.18.1"
+    "react-native-webview": "11.18.1",
+    "react-query": "^3.39.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
