--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gifted-chat": "^1.0.0",
+    "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
